fixed the overflow

--- a/style.css
+++ b/style.css
@@ -2,61 +2,61 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  
 }
 
-.bg-img{
+.bg-img {
   width: 100%;
   min-width: 100vh;
   padding-left: 8%;
   padding-right: 8%;
-  box-sizing:  border-box;
+  box-sizing: border-box;
   overflow: hidden;
   background-image: url(images/header\ bg.jpg);
   background-size: cover;
   background-position: center;
 }
 
-.navbar{
+.navbar {
   width: 100%;
-  display:  flex;
+  display: flex;
   align-items: center;
 }
 
-.logo{
+.logo {
   width: 100px;
   cursor: pointer;
   margin: 30px 0;
 }
 
-.menu-icon{
+.menu-icon {
   width: 25px;
   cursor: pointer;
   display: none;
 }
 
-nav{
+nav {
   flex: 1;
   text-align: right;
 }
 
-nav ul li{
+nav ul li {
   list-style: none;
   display: inline-block;
-  margin-right:  30px;
-
+  margin-right: 30px;
 }
 
-nav ul li a{
+nav ul li a {
   text-decoration: none;
-  color: aqua;
+  color: white;
   font-size: 18px;
 }
 
-nav ul li a:hover{
-  color: blueviolet;
+nav ul li a:hover {
+  color: white;
+  cursor: pointer;
+  transition: color 0s, box-shadow 0.4s;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
-
 
 /* .bg-img{
     background-image: url(images/header\ bg.jpg);
@@ -68,16 +68,14 @@ nav ul li a:hover{
 .header {
   width: 100%;
   height: 700px;
-  
-  
- 
+
   padding: 20px;
 }
 
 #club_logo {
   width: 190px;
   height: 200px;
-margin-top: 150px;
+  margin-top: 150px;
   align-items: center;
   display: block;
   margin-left: auto;
@@ -101,11 +99,10 @@ margin-top: 150px;
   font-family: "Trebuchet MS";
   color: white;
   text-align: center;
-  
 }
 
 .header-content p {
-  font-weight:400;
+  font-weight: 400;
   letter-spacing: 0.2px;
   font-size: 2rem;
   font-family: Cambria;
@@ -121,7 +118,6 @@ margin-top: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 #about-heading {
@@ -203,7 +199,7 @@ margin-top: 150px;
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.card:hover{
+.card:hover {
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.8);
 }
 
@@ -215,7 +211,6 @@ margin-top: 150px;
 .card-body {
   margin: auto;
   text-align: center;
-  
 }
 
 .btn {
@@ -227,29 +222,33 @@ margin-top: 150px;
   height: 30px;
 }
 
-.footer{
-    width: 100%;
-    height: 50px;
-    background-color: rgb(8, 23, 40);
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(8, 23, 40);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#footer-text{
-    color:  white;
-    text-align: center;
-    padding: 10px;
+.footer img {
+  width: 30px;
+  height: 30px;
 }
 
+#footer-text {
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
 
-
-
-@media only screen and (max-width:700px){
-
-  .bg-img{
+@media only screen and (max-width: 700px) {
+  .bg-img {
     width: 100%;
-    min-width: 80vh;
+    min-height: 100vh;
     padding-left: 2%;
     padding-right: 2%;
-    box-sizing:  border-box;
+    box-sizing: border-box;
     overflow: hidden;
     background-image: url(images/header\ bg.jpg);
     background-size: cover;
@@ -259,43 +258,41 @@ margin-top: 150px;
   .header {
     width: 100%;
     height: 100vh;
-    
-    
-   
+
     padding: 20px;
   }
-  nav ul{
-      width: 100%;
-      position: absolute;
-      z-index: 2;
-      background-color: rgb(17, 4, 91);
-      overflow: hidden;
-      top:  75px;
-      right:  0;
+  nav ul {
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+    background: linear-gradient(rgb(0, 98, 255), rgb(4, 4, 58));
+    overflow: hidden;
+    top: 105px;
+    right: 0;
   }
 
-  nav ul li{
-      display: block;
-      margin-top: 10px;
-      margin-bottom: 10px;
+  nav ul li {
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
-  nav ul li a{
-      color: white;
+  nav ul li a {
+    color: white;
   }
 
-  .menu-icon{
-      display: block;
+  .menu-icon {
+    display: block;
   }
 
-  #menulist{
-      overflow: hidden;
-      transition: 0.5s;
+  #menulist {
+    overflow: hidden;
+    transition: 0.5s;
   }
   #club_logo {
     width: 90px;
     height: 100px;
-  margin-top: 250px;
+    margin-top: 250px;
     align-items: center;
     display: block;
     margin-left: auto;
@@ -314,8 +311,7 @@ margin-top: 150px;
     color: white;
     text-align: center;
     animation: pulse; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 2s; /* don't forget to set a duration! */
-    
+    animation-duration: 2s; /* don't forget to set a duration! */
   }
   .header-content p {
     font-weight: 200;
@@ -323,9 +319,9 @@ margin-top: 150px;
     font-size: 1rem;
     color: white;
     animation: pulse; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 2s; /* don't forget to set a duration! */
+    animation-duration: 2s; /* don't forget to set a duration! */
   }
- 
+
   .about {
     width: 100%;
     height: auto;
@@ -335,8 +331,7 @@ margin-top: 150px;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    overflow-x:hidden;
-    
+    overflow-x: hidden;
   }
 
   #about-heading {
@@ -357,7 +352,6 @@ margin-top: 150px;
     border-radius: 18px;
     color: white;
     text-align: justify;
-   
   }
 
   .about-content {
@@ -367,15 +361,23 @@ margin-top: 150px;
   /* .about-img {
     width: 70%;
   } */
-  
+
   .about-img img {
     height: 300px;
     width: 300px;
   }
+  /* .card{
+    width: 20px;
+  } */
 
   .card-img-top {
-    width: 4rem;
+    width: 3rem;
     height: 12rem;
   }
- 
+
+  #footer-text {
+    color: white;
+    text-align: center;
+    padding: 7px;
+  }
 }
